--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,16 @@ body{
 
 main{
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  flex-direction: column;
+  align-items: center;
 }
 .container{
   background-color: #FFFFFF;
   width: 870px;
   padding: 30px;
+  margin-top: 21px;
+  border-radius:5px ;
 }
 .section-title{
   color: #562EFF; 
@@ -21,6 +25,7 @@ main{
 
 hr{
   border: 1px solid #D1D1D1;
+  margin-bottom: 27px;
 }
 /* top players style */
  .players{
@@ -80,4 +85,51 @@ hr{
 .blogs{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+ grid-row-gap: 30px;
+}
+
+
+/* courses style */
+.courses{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 24px;
+}
+
+.course .course-banner img{
+  width: 224px;
+  height: 104px;
+}
+.course-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.fa-star.filled{
+  color: #FFC014;
+
+}
+.fa-star.empty{
+  color: #AEAEAE;
+}
+
+
+/* Media Queries */
+@media  only screen and (max-width:688px) {
+  .container{
+    width:100%
+  }
+  .players, .blogs, .courses{
+  
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .player, .blog{
+    flex-direction: column;
+
+  }
+
+  
+  
 }
